增加删除redis中新闻缓存的接口